[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
edition = "2021"
license = "Artistic-2.0"
name = "jam"
version = "0.2.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[[example]]
crate-type = ["lib"]
name = "spec"
# required-features = ["generate"]

[features]
generate = ["dep:bumpalo"]

[dependencies]
bumpalo = { version = "3.13.0", optional = true }

[dev-dependencies]
